name:                euler-haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tyehle/euler-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Tobin Yehle
maintainer:          tobinyehle@gmail.com
copyright:           2016 Tobin Yehle
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     P067
                     , Primes
                     , Arrays
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable euler
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , euler-haskell
  default-language:    Haskell2010

test-suite euler-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , euler-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tyehle/euler-haskell
